Overflow Fix

--- a/inspirus/index.css
+++ b/inspirus/index.css
@@ -104,7 +104,8 @@
   top: 0;
   left: 0;
   right: 0;
-  /* background: var(--primary-3); */
+  background: var(--primary-3);
+  background-image: url('/Assets/grain_dark.png');
   height: 60px;
   display: flex;
   align-items: center;
@@ -122,23 +123,12 @@
       background: var(--primary-2);
     }
   }
-  & div{
+  & .pages{
     position: relative;
     display: flex;
     align-items: center;
     gap: 10px;
-    & i{
-      right: 45px;
-      white-space: nowrap;
-      /* display: flex; */
-      position: absolute;
-
-      /* width: 20ch; */
-      /* user-select: none; */
-      font-weight: 100;
-      opacity: .8;
-      
-    }
+ 
     & a{
       cursor: pointer;
       font-family: Noto Sans;
@@ -148,6 +138,21 @@
         color: var(--textColorHover);
       }
     }
+  }
+  & .rightNavBarIConNQuote{
+    display: flex;
+    align-items: center;
+    position: relative;
+    & i{
+      /* top: 40px; */
+      right: 40px;
+      white-space: nowrap;
+      position: absolute;
+      font-weight: 100;
+      opacity: .1;
+      
+    }
+   
   }
 }
 
@@ -202,9 +207,9 @@ body {
   cursor: pointer;
   aspect-ratio: 16/10;
   width: 20rem;
-  /* overflow: hidden; */
   padding: 1rem;
   position: relative;
+
   /* outline: rgba(128, 128, 128, 0.2) 1px solid; */
   transition: outline 0.3s;
   border-radius: 7px;
